# data-quality-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MODERNIZATION.md  MODERNIZATION_COMPLETE.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
config/: alerting_config.yaml  data_quality_config.yaml
dashboard/: app.py
data/: customers.csv
docker/: Dockerfile  docker-compose.yml  init-db.sql
dqf/: __init__.py  cli.py  framework.py  monitor.py  profiler.py  reporters.py  validator.py
examples/: basic_profiling.py  custom_validators.py  pipeline_integration.py
reports/: .gitignore
tests/: conftest.py  test_integration.py  test_monitor.py  test_profiler.py  test_validator.py
