[project]
name = "data-quality-framework"
version = "0.1.0"
description = "A comprehensive data quality validation, profiling, and monitoring framework"
authors = [
    {name = "Flockyy", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["data-quality", "data-validation", "data-profiling", "data-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
    "great-expectations>=0.18.0",
    "pandera>=0.17.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.5.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0",
    "markdown>=3.4.0",
    "streamlit>=1.28.0",
    "streamlit-aggrid>=0.3.4",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.23.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "evidently>=0.4.0",
    "ydata-profiling>=4.5.0",
    "prometheus-client>=0.18.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
dqf = "dqf.cli:main"

[project.urls]
Homepage = "https://github.com/Flockyy/data-quality-framework"
Documentation = "https://github.com/Flockyy/data-quality-framework#readme"
Repository = "https://github.com/Flockyy/data-quality-framework"
Issues = "https://github.com/Flockyy/data-quality-framework/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dqf"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

# Enable Pyflakes (`F`) and pycodestyle (`E`) codes by default
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
    "YTT", # flake8-2020
    "S",  # bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",  # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",  # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert
    "S608",   # possible SQL injection
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "PLR1722", # use sys.exit
    "TRY003",  # long exception message
    "COM812",  # missing trailing comma (handled by formatter)
    "ISC001",  # implicit string concatenation (conflicts with formatter)
    "INP001",  # implicit namespace package
    "PD901",   # generic df variable name
    "NPY002",  # legacy numpy random
    "FBT001",  # boolean positional arg
    "FBT002",  # boolean default positional arg
    "PTH123",  # open instead of Path.open
    "A002",    # argument shadows builtin
    "SIM108",  # use ternary operator
    "RET505",  # unnecessary elif after return
    "DTZ005",  # datetime.now without tz
    "PD003",   # isna preferred to isnull
    "BLE001",  # blind except
    "ARG002",  # unused method argument
    "RET504",  # unnecessary assignment before return
    "T201",    # print found
    "S307",    # use of eval
    "PGH001",  # no builtin eval
    "N806",    # variable should be lowercase
    "RUF013",  # implicit optional
    "F841",    # unused variable
    "B007",    # unused loop variable
    "SLF001",  # private member access
    "E402",    # module import not at top
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "PLR2004", "ARG001", "FBT001"]
"examples/**/*.py" = ["T201", "S311", "INP001"]

[tool.ruff.isort]
known-first-party = ["dqf"]
force-single-line = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 10
max-branches = 15

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=dqf",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["dqf"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "examples", "venv", ".venv"]
skips = ["B101", "B601"]

# Black configuration (for reference, using ruff format instead)
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
